cmake_minimum_required(VERSION 3.20 FATAL_ERROR)
project(TEST_PROGRAM VERSION 00.00.01 LANGUAGES CXX)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

find_package(ROOT REQUIRED COMPONENTS Minuit2)

if(NOT DEFINED ENV{SCECORR_PATH})
    message(FATAL_ERROR "You must set SCECORR_PATH environment variable")
endif()

add_subdirectory(src)
